--- a/index.ipynb
+++ b/index.ipynb
@@ -193,7 +193,8 @@
    ],
    "source": [
     "\"Ceo\" # 'CEO'\n",
-    "name = \"ceo\"\n"
+    "name = \"ceo\"\n",
+    "name.upper()"
    ]
   },
   {
