--- a/index.ipynb
+++ b/index.ipynb
@@ -239,7 +239,8 @@
    },
    "outputs": [],
    "source": [
-    "'vandelay.com' # 'www.vandelay.com'\n"
+    "'vandelay.com' # 'www.vandelay.com'\n",
+    "name = vandelay.com"
    ]
   },
   {
