--- a/index.ipynb
+++ b/index.ipynb
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {
     "scrolled": true
    },
@@ -240,10 +240,10 @@
     {
      "data": {
       "text/plain": [
-       "'wwwvandelay.com'"
+       "'www.vandelay.com'"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
