--- a/index.ipynb
+++ b/index.ipynb
@@ -220,7 +220,7 @@
    ],
    "source": [
     "\"art.vandelay@vandelay.co\" # False\n",
-    "bool.endswith(.com)\n"
+    "bool.\n"
    ]
   },
   {
